--- a/src/app/admin/tab-schools/tab-schools.component.scss
+++ b/src/app/admin/tab-schools/tab-schools.component.scss
@@ -12,6 +12,14 @@ ion-grid.background--light {
   background-color: #f4f5f8;
 }
 
+ion-list.margin-bottom--none {
+  margin-bottom: 0;
+}
+
+ion-list.margin-top--none {
+  margin-top: 0;
+}
+
 ion-modal.modal-classes__item ion-label{
   --color: #666666 !important;
   font-size: 1rem !important;
