--- a/src/app/admin/tab-schools/tab-schools.component.html
+++ b/src/app/admin/tab-schools/tab-schools.component.html
@@ -33,7 +33,19 @@
     <ion-list>
       @for(school of schools; track school.id) {
         <ion-item-sliding class="sliding-item-card" #schoolSlidingItem>
-
+          <ion-item-options side="start">
+            <ion-item-option id="delete-{{ school.id }}" color="danger">
+              <ion-icon slot="icon-only" name="trash"></ion-icon>
+            </ion-item-option>
+            <ion-action-sheet
+             trigger="delete-{{ school.id }}"
+             header="Estás a punto de eliminar"
+             subHeader="{{ school.nombre }}"
+             [buttons]="actionSheetButtons"
+             (didDismiss)="onDeleteSchool($event, schoolSlidingItem, school)"
+            >
+            </ion-action-sheet>
+          </ion-item-options>
           <ion-item class="custom-item">
             <ion-label>
               <h2>{{ school.nombre }}</h2>
@@ -41,127 +53,96 @@
             </ion-label>
             <ion-chip>PIN: <strong>{{ school.pin }}</strong></ion-chip>
           </ion-item>
-
           <ion-item-options side="end">
-
             <ion-item-option id="edit-{{ school.id }}">
               <ion-icon slot="icon-only" name="create"></ion-icon>
             </ion-item-option>
-
-            <ion-item-option id="delete-{{ school.id }}" color="danger">
-              <ion-icon slot="icon-only" name="trash"></ion-icon>
-            </ion-item-option>
-
-            <ion-action-sheet
-            trigger="delete-{{ school.id }}"
-            header="Estás a punto de eliminar"
-            subHeader="{{ school.nombre }}"
-            [buttons]="actionSheetButtons"
-            (didDismiss)="onDeleteSchool($event, schoolSlidingItem, school)"
-            >
-            </ion-action-sheet>
-
           </ion-item-options>
         </ion-item-sliding>
+
         <!-- Modal (Actualizar escuela) -->
         <ion-modal
-        trigger="edit-{{school.id}}"
-        [initialBreakpoint]="initialBreakpoint"
-        [breakpoints]="breakpoints"
-        (didDismiss)="onModalDismiss(schoolSlidingItem)"
+         trigger="edit-{{school.id}}"
+         [initialBreakpoint]="0.60"
+         [breakpoints]="breakpoints"
+         (didDismiss)="onModalDismiss(schoolSlidingItem)"
         >
           <ng-template>
-
             <ion-header>
-              <ion-toolbar>
+              <ion-toolbar color="primary">
                 <ion-buttons slot="start">
                   <ion-button (click)="closeModal('edit-'+school.id)">Cancelar</ion-button>
                 </ion-buttons>
                 <ion-title>Editar Escuela</ion-title>
                 <ion-buttons slot="end">
                   <ion-button
-                  [strong]="true"
-                  [disabled]="isNotDataChanged(school, nameEditInput, pinEditInput)"
-                  (click)="onUpdateSchool(school, nameEditInput, pinEditInput)"
+                   [strong]="true"
+                   [disabled]="isNotDataChanged(school, nameEditInput, pinEditInput)"
+                   (click)="onUpdateSchool(school, nameEditInput, pinEditInput)"
                   >
                     Guardar
                   </ion-button>
                 </ion-buttons>
               </ion-toolbar>
             </ion-header>
-
             <ion-content color="light">
-              <!-- BEGIN EDIT SCHOOL ---------------------------------------------------------->
-
                 <form>
-
                   <ion-list [inset]="true">
                     <ion-item>
                       <ion-input
-                      label="CCT (Clave del Centro de Trabajo)"
-                      labelPlacement="stacked"
-                      value="{{ school.cct }}"
-                      disabled
+                       label="CCT (Clave del Centro de Trabajo)"
+                       labelPlacement="stacked"
+                       value="{{ school.cct }}"
+                       disabled
                       >
                       </ion-input>
                     </ion-item>
                   </ion-list>
-
                   <ion-list [inset]="true">
                     <ion-item>
                       <ion-input
-                      class="input__text--uppercase"
-                      label="Nombre de la escuela"
-                      labelPlacement="stacked"
-                      maxlength="100"
-                      value = "{{ school.nombre }}"
-                      #nameEditInput
+                       class="input__text--uppercase"
+                       label="Nombre de la escuela"
+                       labelPlacement="stacked"
+                       maxlength="100"
+                       value = "{{ school.nombre }}"
+                       #nameEditInput
                       >
                       </ion-input>
                     </ion-item>
                   </ion-list>
-
                   <ion-list [inset]="true">
                     <ion-input-otp value="{{  school.pin }}" #pinEditInput>
                       <ion-label>PIN</ion-label>
                     </ion-input-otp>
                   </ion-list>
-
                 </form>
-
-
-              <!-- END EDIT SCHOOL ----------------------------------------------------->
             </ion-content>
-
           </ng-template>
         </ion-modal>
       }
     </ion-list>
-
     <ion-toast
-    cssClass="page__toast"
-    [message]="toastMessage"
-    [isOpen]="isToastOpen"
-    [duration]="5000"
-    (didDismiss)="this.setOpenToast(false)"
+     cssClass="page__toast"
+     [message]="toastMessage"
+     [isOpen]="isToastOpen"
+     [duration]="5000"
+     (didDismiss)="this.setOpenToast(false)"
     >
     </ion-toast>
-
   </ion-content>
 }
-
 
 <!-- Modal (Nueva Escuela) -->
 <ion-modal
  trigger="new-school-btn"
  (willDismiss)="closeModal('new-school-btn')"
- [initialBreakpoint]="initialBreakpoint"
+ [initialBreakpoint]="0.60"
  [breakpoints]="breakpoints"
 >
   <ng-template>
-
     <ion-header>
-      <ion-toolbar>
+      <ion-toolbar color="primary">
         <ion-buttons slot="start">
           <ion-button (click)="closeModal('new-school-btn')">Cancelar</ion-button>
         </ion-buttons>
@@ -178,10 +159,8 @@
         </ion-buttons>
       </ion-toolbar>
     </ion-header>
-
     <ion-content class="ion-padding" color="light">
       <form [formGroup]="schoolForm">
-
         <ion-list [inset]="true">
           <ion-item>
             <ion-input
@@ -200,7 +179,6 @@
             </ion-text>
           }
         </ion-list>
-
         <ion-list [inset]="true">
           <ion-item>
             <ion-input
@@ -212,16 +190,13 @@
             </ion-input>
           </ion-item>
         </ion-list>
-
         <ion-list [inset]="true">
           <ion-input-otp [value]="pin" disabled>
             <ion-label>PIN</ion-label>
           </ion-input-otp>
         </ion-list>
-
       </form>
     </ion-content>
-
   </ng-template>
 </ion-modal>
 
@@ -235,7 +210,7 @@
 >
   <ng-template>
     <ion-header>
-      <ion-toolbar>
+      <ion-toolbar color="primary">
         <ion-buttons slot="start">
           <ion-button (click)="closeModal('classes-btn');">
             Cerrar
@@ -283,14 +258,13 @@
       </ion-grid>
     </ion-header>
     <ion-content class="ion-padding" color="light">
-
       <ion-list>
         @for(group of groups; track group.id) {
           <ion-item-sliding #groupSlidingItem>
             <ion-item>
               <ion-label>{{ group.nombre }}</ion-label>
             </ion-item>
-            <ion-item-options side="end">
+            <ion-item-options side="start">
               <ion-item-option color="danger" (click)="onDeleteGroup(group)">
                 <ion-icon slot="icon-only" name="trash"></ion-icon>
               </ion-item-option>
@@ -298,7 +272,6 @@
           </ion-item-sliding>
         }
       </ion-list>
-
     </ion-content>
   </ng-template>
 </ion-modal>
@@ -312,7 +285,7 @@
 >
   <ng-template>
     <ion-header>
-      <ion-toolbar>
+      <ion-toolbar color="primary">
         <ion-buttons slot="start">
           <ion-button (click)="closeModal('courses-btn');">
             Cerrar
@@ -327,12 +300,12 @@
             <ion-list class="margin-bottom--none" [inset]="true">
               <ion-item>
                 <ion-input
-                  label="Nueva materia"
-                  labelPlacement="stacked"
-                  placeholder="Nombre"
-                  class="input__text--uppercase"
-                  [(ngModel)]="subjectName"
-                  (keyup.enter)="onAddSubject()"
+                 label="Nueva materia"
+                 labelPlacement="stacked"
+                 placeholder="Nombre"
+                 class="input__text--uppercase"
+                 [(ngModel)]="subjectName"
+                 (keyup.enter)="onAddSubject()"
                 ></ion-input>
               </ion-item>
             </ion-list>
@@ -340,11 +313,11 @@
           <!-- Botón con tamaño automático -->
           <ion-col size="2">
             <ion-button
-              shape="round"
-              color="primary"
-              [disabled]="!isValidSubject()"
-              (click)="onAddSubject()"
-              class="add-subject-btn"
+             shape="round"
+             color="primary"
+             [disabled]="!isValidSubject()"
+             (click)="onAddSubject()"
+             class="add-subject-btn"
             >
               <ion-icon slot="icon-only" name="add"></ion-icon>
             </ion-button>
@@ -352,7 +325,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center">
           <ion-col size="10">
-            <ion-list class="margin-top--none" [inset]="true">
+            <ion-list class="margin-top--none margin-bottom--none" [inset]="true">
               <ion-radio-group value="1" [compareWith]="compareWith" (ionChange)="gradeHandleChange($event)">
                 <ion-item>
                   <ion-radio value="1" justify="space-between">Primero</ion-radio>
@@ -372,7 +345,6 @@
       </ion-grid>
     </ion-header>
     <ion-content class="ion-padding" color="light">
-
       <ion-list>
       @for(subject of subjects; track subject.id) {
         <ion-item-sliding #subjectSlidingItem>
@@ -380,7 +352,7 @@
             <ion-label>{{ subject.nombre }}</ion-label>
             <ion-chip>{{ subject.grado }}°</ion-chip>
           </ion-item>
-          <ion-item-options side="end">
+          <ion-item-options side="start">
             <ion-item-option color="danger" (click)="onDeleteSubject(subject)">
               <ion-icon slot="icon-only" name="trash"></ion-icon>
             </ion-item-option>
@@ -388,7 +360,6 @@
         </ion-item-sliding>
       }
       </ion-list>
-
     </ion-content>
   </ng-template>
 </ion-modal>
