add notifications history to for each student

--- a/src/app/teacher/tab-notifications/tab-notifications.component.scss
+++ b/src/app/teacher/tab-notifications/tab-notifications.component.scss
@@ -1,6 +1,14 @@
+div.subjects-container {
+  margin-top: 1rem;
+}
+
 ion-accordion ion-label {
   font-size: 1.3rem;
   font-weight: 400;
+}
+
+ion-chip {
+  margin: 0.5rem 0.5rem 0 0;
 }
 
 ion-item p {
@@ -16,7 +24,15 @@ ion-note {
   margin-left: 1rem;
 }
 
-ion-label.margin-top--none {
+ion-text {
+  font-size: 0.8rem;
+}
+
+.margin-left--none {
+  margin-left: 0;
+}
+
+.margin-top--none {
   margin-top: 0;
 }
 
@@ -28,4 +44,30 @@ ion-label.margin-top--none {
 .date-button__color--primary::part(native) {
   background: var(--ion-color-primary);
   color: var(--ion-color-primary-contrast);
+}
+
+/* Notifications history */
+ion-label strong {
+  display: block;
+  max-width: calc(100% - 60px);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0.3rem;
+}
+
+ion-label ion-note {
+  font-size: 0.9rem;
+}
+
+.metadata-end-wrapper {
+  align-items: center;
+  display: flex;
+  font-size: 0.8rem;
+  inset-inline-end: 10px;
+  position: absolute;
+  top: 10px;
+}
+
+.metadata-end-wrapper ion-note {
+  font-size: 0.7rem;
 }
