--- a/src/app/teacher/tab-notifications/tab-notifications.component.html
+++ b/src/app/teacher/tab-notifications/tab-notifications.component.html
@@ -28,17 +28,15 @@
           @else {
             @for(student of studentsListByGroup(group.gid); track student.id) {
               <ion-item-sliding #studentSlidingItem>
-
                 <ion-item-options side="start">
                   <ion-item-option
                    color="warning"
-                   id="sent-{{ student.id }}"
+                   id="history-{{ student.id }}"
                    [disabled]="!student.tid"
                   >
                     <ion-icon slot="icon-only" name="notifications"></ion-icon>
                   </ion-item-option>
                 </ion-item-options>
-
                 <ion-item>
                   <ion-label>
                     <h2>
@@ -52,7 +50,6 @@
                     </h2>
                   </ion-label>
                 </ion-item>
-
                 <ion-item-options side="end">
                   <ion-item-option
                    color="tertiary"
@@ -338,6 +335,66 @@
                     </ion-list>
                   </ion-content>
                 </ng-template>
+              </ion-modal>
+
+              <!-- Modal (Historial de notificaciones) -->
+              <ion-modal
+               trigger="history-{{ student.id }}"
+               [initialBreakpoint]="1"
+               [breakpoints]="breakpoints"
+               (willDismiss)="onModalDismiss(studentSlidingItem)"
+               (willPresent)="loadStudentNotifications(student)"
+               #viewHistoryModal
+              >
+              <ng-template>
+                <ion-header color="light">
+                  <ion-toolbar color="primary">
+                    <ion-buttons slot="start">
+                      <ion-button (click)="closeModal('history-'+student.id)">
+                        Cerrar
+                      </ion-button>
+                    </ion-buttons>
+                    <ion-title>Historial</ion-title>
+                  </ion-toolbar>
+                  <ion-list-header>
+                    <br>
+                    {{ student.nombreCompleto }}
+                  </ion-list-header>
+                  <br>
+                  @if(studentNotifications.length !== 0) {
+                    <ion-note>Historial de notificaciones enviadas al tutor.</ion-note>
+                  }
+                  @else {
+                    <ion-note>No se han generado notificaciones aún.</ion-note>
+                  }
+                </ion-header>
+                <ion-content class="ion-padding">
+                  <ion-list [inset]="false">
+                    @for(notification of studentNotifications; track notification.id) {
+                      <ion-item lines="full">
+                        <ion-label>
+                          <strong>{{ notification.tipo }}</strong>
+                          @if(notification.fecha) {
+                            <ion-text>Día: {{ notification.fecha | dateFormat:'date' }}</ion-text>
+                            <br>
+                          }
+                          <ion-note color="medium" class="ion-text-wrap margin-left--none">
+                            {{ notification.observaciones }}
+                          </ion-note>
+                          <div class="subjects-container">
+                            @for(materia of notification.materias; track $index) {
+                              <ion-chip color="primary">{{ materia }}</ion-chip>
+                            }
+                          </div>
+                        </ion-label>
+                        <div class="metadata-end-wrapper" slot="end">
+                          <ion-note color="medium">{{ notification.createdAt | dateFormat:'date' }}</ion-note>
+                        </div>
+                      </ion-item>
+                    }
+                  </ion-list>
+                </ion-content>
+              </ng-template>
               </ion-modal>
             }
           }
