--- a/src/app/caregiver/tab-students/tab-students.component.html
+++ b/src/app/caregiver/tab-students/tab-students.component.html
@@ -1,3 +1,12 @@
-<p>
-  tab-students works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Mis hijos (Alumnos)</ion-title>
+    @if(isLoading) {
+      <ion-progress-bar type="indeterminate" color="warning"></ion-progress-bar>
+    }
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+</ion-content>
