--- a/src/app/teacher/tab-students/tab-students.component.html
+++ b/src/app/teacher/tab-students/tab-students.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Alumnos</ion-title>
+    <ion-title>Administrar alumnos</ion-title>
   </ion-toolbar>
   <ion-toolbar color="primary">
     <ion-searchbar
