--- a/src/app/portal/portal.page.html
+++ b/src/app/portal/portal.page.html
@@ -95,7 +95,7 @@
       <ion-modal trigger="open-modal">
         <ng-template>
           <ion-header>
-            <ion-toolbar>
+            <ion-toolbar color="primary">
               <ion-buttons slot="start">
                 <ion-button (click)="onCloseModal()">Cerrar</ion-button>
               </ion-buttons>
