--- a/src/app/teacher/tab-students/tab-students.component.html
+++ b/src/app/teacher/tab-students/tab-students.component.html
@@ -75,7 +75,7 @@
       >
         <ng-template>
           <ion-header>
-            <ion-toolbar>
+            <ion-toolbar color="primary">
               <ion-buttons slot="start">
                 <ion-button
                 (click)="closeModal('update-'+filteredStudent.id)"
@@ -181,7 +181,7 @@
 >
   <ng-template>
     <ion-header>
-      <ion-toolbar>
+      <ion-toolbar color="primary">
         <ion-buttons slot="start">
           <ion-button
            (click)="closeModal('add-student-btn')"
